Renamed the main files

--- a/samples/index.html
+++ b/samples/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="../build/ngScheduler.css">
+	<link rel="stylesheet" href="../build/ng-schedule.css">
 </head>
 <body>
 <schedule-picker ng-model="sampleSchedule"></schedule-picker>
 <pre>{{sampleSchedule}}</pre>
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="../bower_components/moment/moment.js"></script>
-<script src="../build/ngScheduler.js"></script>
+<script src="../build/ng-schedule.js"></script>
 </body>
 </html>
