--- a/samples/index.html
+++ b/samples/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="ngSchedule">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="../build/ng-schedule.css">
 </head>
+
 <body>
-<schedule-picker ng-model="sampleSchedule"></schedule-picker>
-<pre>{{sampleSchedule}}</pre>
-<script src="../bower_components/angular/angular.min.js"></script>
-<script src="../bower_components/moment/moment.js"></script>
-<script src="../build/ng-schedule.js"></script>
+	<form name="testForm">
+		<schedule-picker name="schedule" ng-model="sampleSchedule" ng-required="true"></schedule-picker>
+		<div>
+			<span>Schedule is valid?</span>
+			<b>{{testForm.schedule.$valid}}</b>
+		</div>
+		<pre>{{sampleSchedule}}</pre>
+		<form>
+			<script src="../bower_components/angular/angular.min.js"></script>
+			<script src="../bower_components/moment/moment.js"></script>
+			<script src="../build/ng-schedule.js"></script>
 </body>
+
 </html>
